第2章として法線マッピングの実装方法を追加

--- a/OpenGL3D_2023_22.md
+++ b/OpenGL3D_2023_22.md
@@ -859,15 +859,906 @@ GLint glGetUniformLocation(シェーダプログラムの管理番号, ユニフ
 >
 >* 光の反射には「拡散反射」と「鏡面反射」がある。
 >* BRDFは「双方向反射率分布関数」のこと。「ある方向からの入射光が、別のある方向(例えば視点方向)に出射する比率」を求めることができる。
->* マイクロファセットBRDFは、物体表面をマイクロファセット(微小平面)の集合として考えるBRDFのこと。
+>* マイクロファセットBRDFは、物体表面を微小平面(マイクロファセット)の集合として考えるBRDFのこと。
 >* マイクロファセットBRDFは、「法線分布項`D`」「幾何減衰項`G`」「フレネル項`F`」を組み合わせて作られる。
 
 <div style="page-break-after: always"></div>
 
-## 2. 
+## 2. 法線(ノーマル)マッピング
 
-### 2.1 
+### 2.1 なぜ法線マッピングを行うのか
 
+<p align="center">
+<img src="images/unsplash.com/vitalijs-barilo-azMZaQCUyV8-unsplash.jpg" width="25%" />
+<img src="images/unsplash.com/jonathan-borba-PbwP04DkhQA-unsplash.jpg" width="25%" />
+<img src="images/unsplash.com/charlie-firth-6v8GsXKJZI8-unsplash.jpg" width="25%" /><br>
+[撮影者 布地:vitalijs barilo 道路:jonathan borba 湖面:charlie firth]
+</p>
+
+布地の繊維、アスファルトの凹凸(おうとつ)、水面に立つさざなみなど、現実世界には微細な凹凸が数多く存在します。わたしたちは、こうした物体表面の構造の存在に慣れているため、凹凸の感じられない物体は作り物だと感じてしまいます。
+
+このような微細な凹凸をポリゴンで再現しようとすると、膨大な頂点数が必要となります。実際に、映画用のモデルなどでは、微細な凹凸まで制作される場合があります。しかし、ゲームのようにリアルタイム性が求められるアプリケーションでは現実的とはいえません。
+
+そのため、3Dグラフィックス性能が十分ではなかった頃は、これらの凹凸はカラーテクスチャに陰影を描き込むことで再現していました。
+
+しかし、陰影として描き込まれた凹凸は、どこから見ても、またどのような光の当たり方をしても陰影が変化しません。そのため、すぐにまやかしの影であることがバレてしまいます。
+
+この問題を解決するために生まれたのが「法線マッピング」です。法線マッピングの基本的な考え方は次のようなものです。
+
+>凹凸が陰影を生むのは法線方向が異なるからだ。つまり、法線さえ再現できれば実際に凹凸を作る必要はないはずだ。
+
+法線の再現には、カラーのかわりに「法線の変化量(摂動)」を記録したテクスチャを使います。法線を記録したテクスチャのことを「法線テクスチャ」といいます。
+
+### 2.2 法線マッピングの種類
+
+法線テクスチャに記録する法線(の摂動)には、以下の2種類が存在します。
+
+| 名前 | 記録する法線の種類 |
+|:-----|:-----|
+| オブジェクト空間法線マッピング | モデル座標系(オブジェクト空間)の法線 |
+| タンジェント空間法線マッピング | 図形に接する平面を基準とする座標系(タンジェント空間)の法線 |
+
+実装は「オブジェクト空間法線マッピング」のほうが簡単です。そのかわり、「モデルの変形に対応できない」、「テクスチャの再利用が難しい」という欠点があります。
+
+「タンジェント空間法線マッピング」は、実装が複雑になるかわりに「オブジェクト空間法線マッピング」の欠点が解消されています。そのため、多くの法線テクスチャはタンジェント空間用に作られています。
+
+本テキストでは欠点の少ない「タンジェント空間法線マッピング」を実装することにします。
+
+### 2.3 タンジェント空間
+
+>「座標系」は、「空間において、座標を決めるための基本情報」です。
+
+コンピューターグラフィックスにおける「タンジェント空間」は、「頂点座標に接する、頂点法線に垂直な平面を基準とする座標系」として定義されます。
+
+<p align="center">
+<img src="images/Tips_07_tangent_vector.jpg" width="33%" /><br>
+[緑=タンジェント(T) 赤=バイタンジェント(B) 青=頂点法線(N)]
+</p>
+
+タンジェント空間のX軸は「タンジェントベクトル」と呼ばれます(「タンジェント空間」の名前の由来)。Y軸は「バイタンジェント・ベクトル」と呼ばれます。Z軸は平面の法線で、これは頂点法線と同じです。
+
+タンジェントベクトル`T`とバイタンジェントベクトル`B`は、頂点座標に接する平面上であればどんな向きも取り得ます。これは、「タンジェント空間の座標系の定義は無数に存在する」ことを意味します。
+
+とはいえ、法線を定義するには「無数に存在する」と言われても困ります。そこで、タンジェント空間法線マッピングでは、「TとBがテクスチャ座標系のUV軸の向きと一致する座標系」が選択されます。
+
+この座標系では、テクスチャ座標系のU軸がタンジェントベクトルと一致し、V軸がバイタンジェントベクトルと一致します。実際の利用法にもとづく説明をすると「法線テクスチャに記録する法線ベクトルの基準となる座標系」が選ばれるわけです。
+
+法線テクスチャと3Dモデルは、この座標系によって関連付けられます。
+
+### 2.4 頂点シェーダにタンジェントベクトル変数を追加する
+
+タンジェント空間法線マッピングでは、頂点ごとにタンジェントベクトルを持たせます。
+
+>今回は説明しませんが、頂点に持たせず、シェーダでタンジェントベクトルを計算するやり方もあります。
+
+それから、法線テクスチャを読み込んでシェーダに割り当てる必要もあります。法線テクスチャはマテリアルとして定義するのが一般的です。
+
+これらを実現するために必要な作業は以下のとおりです。
+
+頂点シェーダ:
+
+>1. 法線マッピング用のin変数とout変数を追加。
+>2. タンジェント座標系からワールド座標系に変換する行列(TBN行列)を計算。
+
+TBN(ティービーエヌ)は「タンジェント、バイタンジェント、ノーマル」の頭文字です。
+
+フラグメントシェーダ:
+
+>1. TBN行列用のin変数と、法線テクスチャのサンプラを追加。
+>2. 法線テクスチャから法線を読み取り、ポリゴン平面の座標系(タンジェント座標系)からワールド座標系に変換。
+
+C++アプリケーション:
+
+>1. `Material`構造体に法線テクスチャ変数を追加。
+>2. MTLファイルから法線テクスチャ名を読み取り、法線テクスチャを読み込んで変数に代入。
+>3. 描画前に法線テクスチャをバインド。
+>4. `Vertex`構造体と`SkeletalVertex`構造体に「タンジェントベクトル」変数を追加。
+>5. 頂点アトリビュートに「タンジェントベクトル」を追加。
+>6. 「タンジェントベクトル」と「バイタンジェントベクトルの向き」を計算し、タンジェントベクトル変数に代入。
+
+それでは、頂点シェーダから法線マッピングに対応させていきましょう。`standared.vert`を開き、法線マッピング用のin変数とout変数を追加してください。
+
+```diff
+ layout(location=0) in vec3 inPosition; // 頂点座標
+ layout(location=1) in vec2 inTexcoord; // テクスチャ座標
+ layout(location=2) in vec3 inNormal;   // 法線ベクトル
++layout(location=3) in vec4 inTangent;  // タンジェントベクトル
+ 
+ // シェーダからの出力
+ layout(location=0) out vec3 outPosition; // ワールド座標
+ layout(location=1) out vec2 outTexcoord; // テクスチャ座標
+-layout(location=2) out vec3 outNormal;   // 法線ベクトル
+-layout(location=3) out vec3 outShadowTexcoord; // シャドウテクスチャ座標
++layout(location=2) out mat3 outTBN;      // 法線変換行列
++layout(location=5) out vec3 outShadowTexcoord; // シャドウテクスチャ座標
+
+ // プログラムからの入力
+ layout(location=0) uniform vec3 scale; // 拡大率
+```
+
+`outNormal`を削除して、代わりにタンジェント、バイタンジェント、法線の3つをまとめて扱う`outTBN`行列を追加しています。`outTBN`は行列なので`vec3`ではなく`mat3`になる点に注意してください。
+
+また、ユニフォーム変数とは異なり、`in`, `out`変数では実際のサイズに応じてロケーション番号を消費します。つまり`mat3`は3つのロケーション番号を使うわけです。
+
+そのため、`outShadowTexcoord`のロケーション番号を`5`に変更しています。
+
+次に、法線ベクトルとタンジェントベクトルからバイタンジェントベクトルを計算し、TBN(ティービーエヌ)行列を作成します。ワールド法線を計算するプログラムを次のように変更してください。
+
+```diff
+   gl_Position = transformMatrix * vec4(inPosition, 1);
+
+   outPosition = gl_Position.xyz;
+
+   // ワールド法線を計算
+-  outNormal = normalMatrix * inNormal;
++  outTBN[0] = normalMatrix * inTangent.xyz;
++  outTBN[2] = normalMatrix * inNormal;
++  outTBN[1] = inTangent.w * cross(outTBN[2], outTBN[0]);
+
+   // シャドウテクスチャ座標を計算
+-  outShadowTexcoord = outPosition + outNormal * shadowNormalOffset;
++  outShadowTexcoord = outPosition + outTBN[2] * shadowNormalOffset;
+   outShadowTexcoord = vec3(shadowTextureMatrix * vec4(outShadowTexcoord, 1));
+
+   // ワールド座標系からビュー座標系に変換
+   vec3 pos = gl_Position.xyz - cameraPosition;
+```
+
+タンジェントベクトルは法線と同じ「向きベクトル」です。そのため、平行移動を含まない`matNormal`行列を使ってワールド座標系に変換します。
+
+### 2.5 skeleta.vertにタンジェントベクトル変数を追加する
+
+3Dモデルの座標変換は`skeletal.vert`でも行っているので、同じ変更を行います。`skeletal.vert`を開き、法線マッピング用のin変数とout変数を追加してください。
+
+```diff
+ layout(location=0) in vec3 inPosition; // 頂点座標
+ layout(location=1) in vec2 inTexcoord; // テクスチャ座標
+ layout(location=2) in vec3 inNormal;   // 法線ベクトル
++layout(location=3) in vec4 inTangent;  // 接線ベクトル
+-layout(location=3) in uvec4 inJoints;  // 座標変換行列の番号
+-layout(location=4) in vec4 inWeights;  // 座標変換行列の影響度
++layout(location=4) in uvec4 inJoints;  // 座標変換行列の番号
++layout(location=5) in vec4 inWeights;  // 座標変換行列の影響度
+ 
+ // シェーダからの出力
+ layout(location=0) out vec3 outPosition; // ワールド座標
+ layout(location=1) out vec2 outTexcoord; // テクスチャ座標
+-layout(location=2) out vec3 outNormal;   // 法線ベクトル
+-layout(location=3) out vec3 outShadowTexcoord; // シャドウテクスチャ座標
++layout(location=2) out mat3 outTBN;      // 法線変換行列
++layout(location=5) out vec3 outShadowTexcoord; // シャドウテクスチャ座標
+ 
+ // プログラムからの入力
+ layout(location=0) uniform mat4 transformMatrix;
+```
+
+次に、`main`関数にあるワールド法線を計算するプログラムを、次のように変更してください。
+
+```diff
+   // ワールド法線を計算
+   mat3 jointNormalMatrix = inverse(transpose(mat3(modelMatrix))); 
+-  outNormal = normalize(jointNormalMatrix * inNormal);
++  outTBN[0] = normalize(jointNormalMatrix * inTangent.xyz);
++  outTBN[2] = normalize(jointNormalMatrix * inNormal);
++  outTBN[1] = normalize(inTangent.w * cross(outTBN[2], outTBN[0]));
+
+   // シャドウテクスチャ座標を計算
+-  outShadowTexcoord = outPosition + outNormal * shadowNormalOffset;
++  outShadowTexcoord = outPosition + outTBN[2] * shadowNormalOffset;
+   outShadowTexcoord = vec3(shadowTextureMatrix * vec4(outShadowTexcoord, 1));
+
+   // ワールド座標系からビュー座標系に変換
+   vec3 pos = gl_Position.xyz - cameraPosition;
+```
+
+これで、頂点シェーダの変更は完了です。
+
+### 2.6 フラグメントシェーダに法線マッピング用の変数を追加する
+
+続いて、フラグメントシェーダを法線マッピングに対応させます。まず法線マッピング用の変数を追加しましょう。`standard.frag`を開き、変数定義を次のように変更してください。
+
+```diff
+ // シェーダへの入力
+ layout(location=0) in vec3 inPosition; // ワールド座標
+ layout(location=1) in vec2 inTexcoord; // テクスチャ座標
+-layout(location=2) in vec3 inNormal;   // 法線ベクトル
+-layout(location=3) in vec3 inShadowTexcoord; // シャドウテクスチャ座標
++layout(location=2) in mat3 inTBN;      // 法線変換行列
++layout(location=5) in vec3 inShadowTexcoord; // シャドウテクスチャ座標
+
+ // テクスチャサンプラ
+ layout(binding=0) uniform sampler2D texColor;
+ layout(binding=1) uniform sampler2D texEmission;
+ layout(binding=2) uniform sampler2DShadow texShadow; // 影用の深度テクスチャ
++layout(binding=3) uniform sampler2D texNormal; // 法線テクスチャ
+
+ // 出力する色データ
+ out vec4 outColor;
+```
+
+### 2.6 法線テクスチャの値をワールド座標系に変換する
+
+タンジェントマッピング法線テクスチャから値を読み取り、ワールド座標系に変換します。法線を正規化するプログラムを次のように変更してください。
+
+```diff
+   // テクスチャのガンマ補正を解除
+   const float crtGamma = 2.2;
+   c.rgb = pow(c.rgb, vec3(2.2));
+
+   outColor = c * color;
+
+-  // 線形補間によって長さが1ではなくなっているので、正規化して長さを1に復元する
+-  vec3 normal = normalize(inNormal);
++  // 法線の長さが0でなければ、法線テクスチャが設定されていると判断する
++  vec3 normal = texture(texNormal, inTexcoord).xyz;
++  if (dot(normal, normal) > 0.0001) {
++    // 8bit値であることを考慮しつつ0～1を-1～+1に変換
++    // この式を使うと8bitの128がちょうど0になる
++    normal = normal * (255.0 / 127.0) - (128.0 / 127.0);
++
++    // タンジェント座標系からワールド座標系に変換
++    // 線形補間によってoutTBNの長さが1ではなくなっているので、正規化して長さを1に復元する
++    normal = normalize(inTBN * normal);
++  } else {
++    // 法線テクスチャが未設定の場合は頂点法線を使う
++    normal = normalize(inTBN[2]);
++  }
+
+   // カメラの方向
+   vec3 cameraVector = normalize(cameraPosition - inPosition);
+```
+
+ここではいくつかの技法を使っています。
+
+
+法線テクスチャは常にRGBのいずれかの要素に値が格納されるため、`texNormal`に法線テクスチャが割り当てられていれば`dot(normal, normal)`は常に0より大きくなります。
+
+しかし、`texNormal`にテクスチャが割り当てられていない場合、`texture`関数の戻り値は`{ 0, 0, 0, 0 }`になります。結果的に`dot(normal, normal)`も`0`になります。
+
+この`texture`関数の性質を利用して、法線テクスチャが割り当てられている場合のみ法線マッピングを行うようにしています。
+
+それから、法線テクスチャは単なるカラーテクスチャなので、`0`～`1`の値として読み取られます。しかし、実際にはこの値は法線なので、`-1`～`+1`として解釈し直さなくてはなりません。
+
+テクスチャカラーを`t`、変換後の法線を`n`とすると、簡単に思いつくのは以下の式です。
+
+$$
+n = t * 2 - 1
+$$
+
+しかし、この式には「`0`を表現できない」という問題があります。
+
+どういうことかというと、通常のカラーテクスチャは8bitなので、0～255までの256段階の値しか記録できません。GPUはこれをそのまま0.0～1.0に割り当てます。結果は、以下のようになります。
+
+| 8bit整数 | 浮動小数点数 |
+|:---:|:---:|
+|   0 | 0.0 |
+|  ︙ |  ︙ |
+| 127 | 0.49803921568 |
+| 128 | 0.50196078431 |
+|  ︙ |  ︙ |
+| 255 | 1.0 |
+
+式`t * 2 - 1`によって`n`を`0`にするには`t = 0.5`でなくてはなりませんが、8bit整数では`0.5`が表現できません。
+
+そして、`0`を表現できないことの何が問題かというと、「頂点法線と正確に一致する法線テクスチャの値」が定義できないことです。
+
+頂点法線と正確に一致させるには`(0, 0, 1)`という値が必要になります。しかし、式`t * 2 - 1`では`0`を表現できないのでこの値を再現できません。
+
+そこで、`0`を表現できるように式を調整します。こうして調整したものが
+
+$$
+n = t * 255 / 127 - 128 / 127
+$$
+
+という式です。この式を使うと8bit整数は次のように変換されます。
+
+| 8bit整数 | t\*255/127 - 128/127 |
+|:---:|:---:|
+|   0 | -1.00787401575 |
+|   1 | -1.0 |
+|  ︙ |  ︙ |
+| 127 |-0.00787401574 |
+| 128 | 0.0 |
+|  ︙ |  ︙ |
+| 255 | 1.0 |
+
+最初の`0`を除くと、`1`が`-1.0`, `128`が`0.0`, `255`が`1.0`に変換されるという、理想的な変換が行われていることが分かります。この式を使うことで、頂点法線と一致する`(0, 0, 1)`が再現できます。
+
+こうして`-1`～`+1`の値に変換したものが、タンジェント座標系の法線ベクトルになります。これに`outTBN`行列を乗算すると、ワールド座標系の法線ベクトルが求められます。
+
+これで、フラグメントシェーダの変更は完了です。
+
+### 2.7 Material構造体に法線テクスチャ変数を追加する
+
+ここからは、CPPアプリケーション側を法線マッピングに対応させていきます。まずマテリアルに法線テクスチャ変数を追加します。`Mesh.h`を開き、`Material`構造体の定義に次のプログラムを追加してください。
+
+```diff
+   float metallic = 0.0f;           // 0=非金属 1=金属
+   TexturePtr texBaseColor;         // 基本色テクスチャ
+   TexturePtr texEmission;          // 発光色テクスチャ
++  TexturePtr texNormal;            // 法線テクスチャ
+ };
+ using MaterialPtr = std::shared_ptr<Material>;
+```
+
+次に、追加した`texNormal`にテクスチャを読み込みます。`Mesh.cpp`を開き、`LoadMTL`関数にある発光色テクスチャを読み取りを試みるプログラムの下に、次のプログラムを追加してください。
+
+```diff
+         LOG_WARNING("%sを開けません", filename.c_str());
+       }
+       continue;
+     }
++
++    // 法線テクスチャ名の読み取りを試みる
++    if (sscanf(line.data(), " map_%*[Bb]ump %[^\n]s", &textureName) == 1 ||
++      sscanf(line.data(), " %*[Bb]ump %[^\n]s", &textureName) == 1) {
++      const std::string filename = foldername + textureName;
++      if (std::filesystem::exists(filename)) {
++        pMaterial->texNormal = textureCallback(filename.c_str());
++      } else {
++        LOG_WARNING("%sを開けません", filename.c_str());
++      }
++      continue;
++    } // map_bump
+
+     // スペキュラ色の読み取りを試みる
+     if (sscanf(line.data(), " Ks %f %f %f",
+```
+
+MTLファイルにおける法線テクスチャの構文は`bump`です。しかし、`map_bump`という構文も広く使われているため、両方に対応させることにしました。
+
+また、エクスポータによっては`bump`ではなく`Bump`という名前で出力されるため、`scanf`の機能を利用して`b`と`B`のどちらでも読み込めるようにしています。
+
+### 2.8 法線テクスチャをGLコンテキストに割り当てる
+
+読み込んだテクスチャを使うには、GLコンテキストに割り当てなくてはなりません。描画パラメータ配列を描画する`Draw`関数の定義に、次のプログラムを追加してください。
+
+```diff
+       if (material.texEmission) {
+         const GLuint tex = *material.texEmission;
+         glBindTextures(1, 1, &tex);
+       } else {
+         glBindTextures(1, 1, nullptr);
+       }
++      if (material.texNormal) {
++        const GLuint tex = *material.texNormal;
++        glBindTextures(3, 1, &tex);
++      } else {
++        glBindTextures(3, 1, nullptr);
++      }
+     }
+
+     glDrawElementsBaseVertex(
+       e.mode, e.count, GL_UNSIGNED_SHORT, e.indices, e.baseVertex);
+```
+
+これで法線テクスチャの設定は完了です。
+
+### 2.9 Vertex構造体にタンジェントベクトルを追加する
+
+続いて、頂点データにタンジェントベクトルを追加していきます。`Mesh.h`を開き、`Vertex`構造体にの定義タンジェントベクトルのメンバ変数を追加してください。
+
+```diff
+ struct Vertex
+ {
+   vec3 position; // 頂点座標
+   vec2 texcoord; // テクスチャ座標
+   vec3 normal;   // 法線ベクトル
++  vec4 tangent;  // 接線ベクトル
+ };
+
+ /**
+ * 描画パラメータ
+```
+
+同様に、`SkeletalVertex`構造体にもタンジェントベクトルを追加します。`SkeletalVertex`構造体の定義にタンジェントベクトルのメンバ変数を追加してください。
+
+```diff
+ struct SkeletalVertex
+ {
+   vec3 position; // 頂点座標
+   vec2 texcoord; // テクスチャ座標
+   vec3 normal;   // 法線ベクトル
++  vec4 tangent;  // 接線ベクトル
+   uint16_t joints[4]; // 影響を受ける関節の番号
+   uint16_t weights[4];  // 各関節の影響度
+```
+
+次に、頂点アトリビュートにタンジェントベクトルを追加します。`Mesh.cpp`を開き、`MeshBuffer`コンストラクタの定義に次のプログラムを追加してください。
+
+```diff
+   // 頂点アトリビュートを設定
+   vao->SetAttribute(0, 3, sizeof(Vertex), offsetof(Vertex, position));
+   vao->SetAttribute(1, 2, sizeof(Vertex), offsetof(Vertex, texcoord));
+   vao->SetAttribute(2, 3, sizeof(Vertex), offsetof(Vertex, normal));
++  vao->SetAttribute(3, 4, sizeof(Vertex), offsetof(Vertex, tangent));
+
+   vaoSkeletal = VertexArrayObject::Create();
+   glBindVertexArray(*vaoSkeletal);
+   glBindBuffer(GL_ELEMENT_ARRAY_BUFFER, *buffer);
+   glBindBuffer(GL_ARRAY_BUFFER, *buffer);
+   vaoSkeletal->SetAttribute(0, 3, sizeof(SkeletalVertex),
+     offsetof(SkeletalVertex, position));
+   vaoSkeletal->SetAttribute(1, 2, sizeof(SkeletalVertex),
+     offsetof(SkeletalVertex, texcoord));
+   vaoSkeletal->SetAttribute(2, 3, sizeof(SkeletalVertex),
+     offsetof(SkeletalVertex, normal));
++  vaoSkeletal->SetAttribute(3, 4, sizeof(SkeletalVertex),
++    offsetof(SkeletalVertex, tangent));
+-  glEnableVertexAttribArray(3);
+-  glVertexAttribIPointer(3, 4, GL_UNSIGNED_SHORT, sizeof(SkeletalVertex),
++  glEnableVertexAttribArray(4);
++  glVertexAttribIPointer(4, 4, GL_UNSIGNED_SHORT, sizeof(SkeletalVertex),
+     reinterpret_cast<void*>(offsetof(SkeletalVertex, joints)));
+-  glEnableVertexAttribArray(4);
+-  glVertexAttribPointer(4, 4, GL_UNSIGNED_SHORT, GL_TRUE, sizeof(SkeletalVertex),
++  glEnableVertexAttribArray(5);
++  glVertexAttribPointer(5, 4, GL_UNSIGNED_SHORT, GL_TRUE, sizeof(SkeletalVertex),
+     reinterpret_cast<void*>(offsetof(SkeletalVertex, weights)));
+```
+
+それから、スケルタルメッシュ用の`LoadOBJ`メンバ関数において、`Vertex`構造体の値を`SkeletalVertex`構造体にコピーしています。ここにも、タンジェントベクトルをコピーするプログラムを追加しなくてはなりません。
+
+スケルタルメッシュ用の`LoadOBJ`メンバ関数の定義に、次のプログラムを追加してください。
+
+```diff
+   for (int i = 0; i < meshData.vertices.size(); ++i) {
+     skeletalVertices[i].position = meshData.vertices[i].position;
+     skeletalVertices[i].texcoord = meshData.vertices[i].texcoord;
+     skeletalVertices[i].normal = meshData.vertices[i].normal;
++    skeletalVertices[i].tangent = meshData.vertices[i].tangent;
+   }
+```
+
+これで、タンジェントベクトルが頂点シェーダに送られるようになりました。
+
+### 2.10 タンジェントベクトルを計算する
+
+タンジェント空間の座標系はポリゴンごとに定義されます。なぜなら、ポリゴンの法線と、ポリゴンに貼り付けられるテクスチャの向きは、ポリゴンごとに異なっているからです。
+
+このことは、頂点が複数のポリゴンで共有されている場合に問題となります。一般に、「ひとつの頂点に設定できるタンジェント空間はひとつだけ」だからです。
+
+そのため、法線テクスチャ作成ツールは「頂点が関わる全てのタンジェント空間を平均化」する処理を行います。そして、平均化されたタンジェント空間を使って法線テクスチャを作成します。
+
+しかし、タンジェント空間の平均化には次のような問題があります。
+
+>* 浮動小数点数の計算誤差
+>* 平均化手順が公開されていないツールがある
+
+浮動小数点数の計算誤差により、タンジェント空間を計算するとき、同じポリゴンでもインデックス順が異なるとわずかに異なる結果になります。同様に、タンジェント空間を加算する順序が異なる場合も結果が変わります。
+
+また、ツールの平均化手順が公開されていない場合、ツールと同じタンジェント空間を計算することはほとんど不可能です。
+
+これらの問題があるため、ツールが異なるとタンジェント空間を正しく復元できません。結果として、ポリゴンの境界で不自然な陰影が生まれることがありました。
+
+この問題をなくす方法のひとつは、同じモデリングツールを使って3Dモデルと法線テクスチャを作成することです。しかし近年は、3Dモデルに求められる水準が上がり、ひとつのツールですべての作業を行うことが困難になってきました。
+
+複数のツールで作業を行うには、標準的なタンジェント空間計算方法が必要です。そんなときに登場したのが`MikkTSpace`(ミック・ティー・スペース)という方法です。
+
+`MikkTSpace`は、2008年にMorten S. Mikkelsen氏が発表した「標準的なタンジェント空間の計算方法」です。
+
+`MikkTSpace`の特徴は、「同じ3Dモデルであれば、たとえインデックス順が異なっていても常に同じ計算結果が得られる」ことです。入力データの順序に注意する必要がないため、ため、多くの3Dツールやゲームエンジンで採用されています。
+
+それ以外の基本的な部分は「タンジェントとバイタンジェントのなす角が大きいほど、その頂点に影響する面積が広い」という考え方にもとづいています。
+
+>2008年の論文は、コペンハーゲン大学のサイト(以下のURL)からダウンロードできます。<br>
+>`http://image.diku.dk/projects/media/morten.mikkelsen.08.pdf`
+>
+>また、以下のURLでは法線とタンジェントの計算方法について、いくつかの議論を読むことができます。<br>
+>`https://github.com/KhronosGroup/glTF/issues/2056`
+
+### 2.11 プロジェクトにMikkTSpaceを組み込む
+
+`MikkTSpace`は、`https://github.com/mmikk/MikkTSpace`で公開されているソースファイルを組み込んで利用します。環境にかかわらず同じ結果を得られることが重要なので、自分で実装することは避けてください。
+
+それでは、ソースファイルをダウンロードしてプロジェクトに組み込みましょう。ブラウザで
+`https://github.com/mmikk/MikkTSpace`を開いてください。すると次のようなページが表示されます。
+
+<p align="center">
+<img src="images/22_mikktspace_0.png" width="60%" />
+</p>
+
+`Code`(コード)と書かれた緑色のボタンをクリックすると、サブメニューが表示されます。<br>
+一番下の`Download ZIP`(ダウンロード・ジップ)をクリックして、適当なフォルダにZIPファイルをダウンロードしてください。
+
+次に、プロジェクトの`Src`フォルダに、`MikkTSpace`という名前のフォルダを作成してください。
+
+<p align="center">
+<img src="images/22_mikktspace_1.png" width="50%" />
+</p>
+
+ダウンロードしたZIPファイルを展開すると`mikktspace.h`と`mikktspace.c`というファイルが見つかります。この2つのファイルを、先ほど作成した`MikkTSpace`フォルダにコピーしてください。
+
+次に、プロジェクトにMikkTSpace用のフィルターを追加します。Visual Studioでプロジェクトを開いてください。そして、ソリューションエクスプローラーにある「ソースファイル」フィルタを右クリックして右クリックメニューを開いてください(①)。
+
+右クリックメニューから「追加」を選び(②)、次に「新しいフィルター(F)」を選択してください(③)。ソリューションエクスプローラーに「新しいフィルター」が追加されるので、名前を`MikkTSpace`に変更してください。
+
+<p align="center">
+<img src="images/22_mikktspace_2.png" width="50%" />
+</p>
+
+作成したフィルタに、MikkTSpace用のファイルを追加します。エクスプローラーでプロジェクトの`Src`フォルダを開いてください。次に、エクスプローラーの`MikkTSpace`フォルダをVisual Studioの`MikkTSpace`フィルタにドラッグ&ドロップしてください。
+
+<p align="center">
+<img src="images/22_mikktspace_3.png" width="66%" />
+</p>
+
+ドラッグ&ドロップを使うと、フォルダ内にあるすべてのファイルをプロジェクトに追加することができます。
+
+この段階でプロジェクトをビルドして、エラーが起きないことを確認してください。
+
+### 2.12 MikkTSpace用のクラスを定義する
+
+`mikktspace.h`には`SMikkTSpaceInterface`(エス・ミック・ティー・スペース・インターフェイス)と`SMikkTSpaceContext`(エス・ミック・ティー・スペース・コンテキスト)という2つの構造体が定義されています。
+
+>* `SMikkTSpaceInterface`構造体: MikkTSpaceシステムとのあいだで、3Dモデルデータを送受信するための関数ポインタを設定する。
+>* `SMikkTSpaceContext`構造体: MikkTSpaceシステムを実行する、`genTangSpaceDefault`(ジェン・タン・スペース・デフォルト)関数の引数。`SMikkTSpaceInterface`構造体へのポインタと、ユーザーデータ(プログラムが任意に設定できるデータ)を設定する。
+
+とりあえずヘッダファイルをインクルードしましょう。<br>
+`Mesh.cpp`を開き、`mikktspace.h`をインクルードしてください。
+
+```diff
+ #include "Mesh.h"
+ #include "ProgramObject.h"
+ #include "Debug.h"
++#include "MikkTSpace/mikktspace.h"
+ #include <numeric>
+ #include <algorithm>
+```
+
+次に、`MikkTSpace`クラスを定義します。これは`SMikkTSpaceInterface`を実装するクラスです。インクルード文の下に、次のプログラムを追加してください。
+
+```diff
+ #include <filesystem>
+ #include <fstream>
+ #include <stdio.h>
++
++/**
++* MikkTSpaceのインターフェイス実装
++*/
++class MikkTSpace
++{
++public:
++  // コンストラクタ
++  MikkTSpace()
++  {
++  }
++
++  // デストラクタ
++  ~MikkTSpace() = default;
++
++  // メンバ変数
++  SMikkTSpaceInterface interface;
++};
+
+ /**
+ * プリミティブを描画する
+```
+
+>**【interfaceメンバ変数が青く表示されるんですけど？】**<br>
+>これは、`interface`がC++/CLI(シープラスプラス・シーエルアイ)という言語のキーワードだからです。C++/CLIはMicrosoftが開発した「C++に.NET対応機能を組み込んだ言語」です。名前にC++と付いてはいますが、C++とは別モノです。<br>
+>しかし、IntelliSenseはC++とC++/CLIを区別しません。そのため、C++/CLI専用のキーワードにも色が付いてしまいます。<br>
+>2022年現在、残念ながらこの現象を回避する方法はありません。
+
+`SMikkTSpaceInterface`に設定するすべての関数ポインタ型は「コールバック関数(ライブラリが必要なタイミングで呼び出す関数のこと)」です。これらのコールバック関数は
+`SMikkTSpaceContext`型のポインタ引数を持ちます。
+
+`SmikkTSpaceContext`型には`SMikkTSpaceInterface`へのポインタに加えて、ユーザー(ライブラリの利用者)が自由に指定できる`m_pUserData`(エム・ピー・ユーザーデータ)メンバ変数が用意されています。
+
+コールバック関数はこのメンバ変数を通じて必要なデータにアクセスします。最低限必要なのは3Dモデルの頂点データとインデックスデータです。
+
+しかし、指定できるポインタはひとつだけです。そこで、この2つを持つ構造体を作成して、構造体のポインタを指定することにします。`MikkTSpace`クラスの定義に、次の型定義を追加してください。
+
+```diff
+ class MikkTSpace
+ {
+ public:
++  /**
++  * MikkTSpace用のユーザーデータ
++  */
++  struct UserData
++  {
++    std::vector<uint16_t>& indices;
++    std::vector<Vertex>& vertices;
++  };
++
+   // コンストラクタ
+   MikkTSpace()
+```
+
+### 2.13 総ポリゴン数を返す関数を設定する
+
+MikkTSpaceを動作させるには、以下の6つのインターフェイス関数を設定する必要があります。
+
+>* m_getNumFaces: 3Dモデルのポリゴン数を返す。
+>* m_getNumVerticesOfFace: ひとつのポリゴンの頂点数を返す。
+>* m_getPosition: 頂点の座標を返す。
+>* m_getNormal: 頂点の法線を返す。
+>* m_getTexCoord: 頂点のテクスチャ座標を返す。
+>* m_setTSpaceBasic: タンジェント空間の情報を受け取る。
+
+>上記以外に`m_setTSpace`というインターフェイス関数があります。この関数を使うと、
+>`m_setTSpaceBasic`より詳細なタンジェント空間情報を受け取れます。通常の法線マッピングでは詳細情報を使わないので、今回は設定しません。
+
+それでは、インターフェイス関数を作成しましょう。それぞれの関数は比較的単純なので、ラムダ式で無名関数を作成して割り当てることにします。
+
+`MikkTSpace`クラスのコンストラクタに次のプログラムを追加してください。
+
+```diff
+   // コンストラクタ
+   MikkTSpace()
+   {
++    // モデルの総ポリゴン数を返す
++    interface.m_getNumFaces = [](const SMikkTSpaceContext* pContext)
++    {
++      UserData* p = static_cast<UserData*>(pContext->m_pUserData);
++      return static_cast<int>(p->indices.size() / 3);
++    };
+   }
+
+   // デストラクタ
+```
+
+`m_getNumFaces`(エム・ゲット・ナム・フェイシズ)には「モデルの総ポリゴン数を返す」関数を設定します。
+
+ユーザーデータは`SMikkTSpaceContext`構造体の`m_pUserData`(エム・ピー・ユーザーデータ)メンバ変数として渡されます。この変数は`void*`型なので、`static_cast`を使って
+`UserData`型に戻してから使用します。
+
+総ポリゴン数はインデックス数の1/3です。
+
+### 2.14 ポリゴンの頂点数を返す関数を設定する
+
+次に、ポリゴンの頂点数を返す関数`m_getNumVerteciesOfFace`(エム・ゲット・ナム・バーティシーズ・オフ・フェイス)メンバ変数を設定します。`m_getNumFaces`メンバ変数を設定するプログラムの下に、次のプログラムを追加してください。
+
+```diff
+       UserData* p = static_cast<UserData*>(pContext->m_pUserData);
+       return static_cast<int>(p->indices.size() / 3);
+     };
++
++    // ポリゴンの頂点数を返す
++    interface.m_getNumVerticesOfFace = [](const SMikkTSpaceContext* pContext,
++      int iFace)
++    {
++      return 3;
++    };
+   }
+
+   // デストラクタ
+```
+
+MikkTSpaceは三角形だけでなく四角形にも対応しています。そのため、ポリゴンごとに頂点数を指定できるようになっています。今回は三角形しか使わないため、常に3を返します。
+
+### 2.15 頂点の座標を返す関数を設定する
+
+続いて、頂点の座標を返す`m_getPosition`(エム・ゲット・ポジション)メンバ変数を設定します。`m_getNumVerticesOfFace`メンバ変数を設定するプログラムの下に、次のプログラムを追加してください。
+
+```diff
+     {
+       return 3;
+     };
++
++    // 頂点の座標を返す
++    interface.m_getPosition = [](const SMikkTSpaceContext* pContext,
++      float fvPosOut[], int iFace, int iVert)
++    {
++      UserData* p = static_cast<UserData*>(pContext->m_pUserData);
++      const int index = p->indices[iFace * 3 + iVert];
++      std::copy_n(&p->vertices[index].position.x, 3, fvPosOut);
++    };
+   }
+
+   // デストラクタ
+```
+
+このインターフェイス関数には、`pContext`(ピー・コンテキスト)以外に`fvPosOut`(エフブイ・ポス・アウト)と`iFace`(アイ・フェイス)、`iVert`(アイ・バート)という3つの引数があります。
+
+実装する内容は、
+
+>`iFace`番目のポリゴンの`iVert`番目の頂点の座標を、`fvPosOut`配列にX,Y,Zの順に代入すること。
+
+です。`iVert`には0～2の値が指定される点に注意してください。
+
+### 2.16 頂点の法線を返す関数を設定する
+
+頂点の法線を返す`m_getNormal`(エム・ゲット・ノーマル)メンバ変数を設定します。
+`m_getPosition`メンバ変数を定義するプログラムの下に、次のプログラムを追加してください。
+
+```diff
+       const int index = p->indices[iFace * 3 + iVert];
+       std::copy_n(&p->vertices[index].position.x, 3, fvPosOut);
+     };
++
++    // 頂点の法線を返す
++    interface.m_getNormal = [](const SMikkTSpaceContext* pContext,
++      float fvNormOut[], int iFace, int iVert)
++    {
++      UserData* p = static_cast<UserData*>(pContext->m_pUserData);
++      const int index = p->indices[iFace * 3 + iVert];
++      std::copy_n(&p->vertices[index].normal.x, 3, fvNormOut);
++    };
+   }
+
+   // デストラクタ
+```
+
+関数の内容は`m_getPosition`とほとんど同じです。違いは、引数`fvNormalOut`(エフブイ・ノーマル・アウト)配列に法線を代入することだけです。
+
+### 2.17 頂点のテクスチャ座標を返す関数を設定する
+
+頂点のテクスチャ座標を返す`m_geteTexCoord`(エム・ゲット・テックスコード)メンバ変数を設定します。
+
+`m_getNormal`メンバ変数を設定するプログラムの下に、次のプログラムを追加してください。
+
+```diff
+       const int index = p->indices[iFace * 3 + iVert];
+       std::copy_n(&p->vertices[index].normal.x, 3, fvNormOut);
+     };
++
++    // 頂点のテクスチャ座標を返す
++    interface.m_getTexCoord = [](const SMikkTSpaceContext* pContext,
++      float fvTexcOut[], int iFace, int iVert)
++    {
++      UserData* p = static_cast<UserData*>(pContext->m_pUserData);
++      const int index = p->indices[iFace * 3 + iVert];
++      std::copy_n(&p->vertices[index].texcoord.x, 2, fvTexcOut);
++    };
+   }
+
+   // デストラクタ
+```
+
+この関数も`m_getPosition`, `m_getNormal`とほとんど同じです。ただし、テクスチャ座標は二次元なので、`fvTexOut`(エフブイ・テックス・アウト)配列も2要素しかない点には注意してください。
+
+### 2.18 タンジェント空間データを受け取る関数を設定する
+
+続いて、`m_setTSpaceBasic`(エム・セット・ティースペース・ペーシック)メンバ変数を設定します。`m_getTexCoord`メンバ変数を設定するプログラムの下に、次のプログラムを追加してください。
+
+```diff
+       const int index = p->indices[iFace * 3 + iVert];
+       std::copy_n(&p->vertices[index].texcoord.x, 2, fvTexcOut);
+     };
++
++    // 「タンジェントベクトル」と「バイタンジェントベクトルの向き」を受け取る
++    interface.m_setTSpaceBasic = [](const SMikkTSpaceContext* pContext,
++      const float fvTangent[], float fSign, int iFace, int iVert)
++    {
++      UserData* p = static_cast<UserData*>(pContext->m_pUserData);
++      const int index = p->indices[iFace * 3 + iVert];
++      p->vertices[index].tangent =
++        vec4(fvTangent[0], fvTangent[1], fvTangent[2], fSign);
++    };
+   }
+
+   // デストラクタ
+```
+
+このインターフェイスはMikkTSpaceが計算した「タンジェント空間のデータ」を受け取るためのものです。引数の意味は次のとおりです。
+
+>* `fvTangent`(エフブイ・タンジェント): タンジェントベクトル
+>* `fSign`(エフ・サイン): バイタンジェントベクトルの向き
+>* `iFace`(アイ・フェイス): データを設定するポリゴンの番号
+>* `iVert`(アイ・バート): データを設定する頂点の番号
+
+### 2.19 使わないメンバ変数にnullptrを設定する
+
+MikkTSpaceには、タンジェント空間を受け取る関数が２つあります。ひとつはすぐ前に設定した`m_setTSpaceBasic`で、もうひとつは`m_setTSpace`メンバ変数です。
+
+`m_setTSpace`を設定すると、「レリーフマッピング」という技法のための「より詳細なデータ」を受け取ることができます。しかし、法線マッピングでは必要ありません。
+
+MikkTSpaceでは、`m_setTSpaceBasice`または`m_setTSpace`のうち、使わないメンバ変数にはnullptrを設定しておく必要があります。`m_setTSpaceBasic`メンバ変数を設定するプログラムの下に、次のプログラムを追加してください。
+
+```diff
+       p->vertices[index].tangent =
+         vec4(fvTangent[0], fvTangent[1], fvTangent[2], fSign);
+     };
++
++    // 使わないのでnullptrを設定
++    interface.m_setTSpace = nullptr;
+   }
+
+   // デストラクタ
+```
+
+これでインターフェイスの設定は完了です。
+
+### 2.20 MikkTSpaceオブジェクトを作成する
+
+さて、完成したMikkTSpaceクラスですが、適当なタイミングでオブジェクトを作成しなくてはなりません。MikkTSpaceオブジェクトを作成するタイミングには、次の2パターンが考えられます。
+
+>* 最初に作成して使い回す。
+>* OBJファイルを読み込むときに毎回作成する。
+
+選択基準となるのは「オブジェクトのサイズ」、「作成にかかる時間」です。
+
+| | メリット | デメリット |
+|:-:|:--|:--|
+| 使い回す | 作成にかかる時間が最初の1回だけ | サイズが大きいとメモリが無駄になる |
+| 毎回作成 | メモリが無駄にならない | 読み込み時間が長くなる |
+
+MikkTSpaceクラスの場合、サイズは大きくありません。コンストラクタも、そんなに時間のかかる内容ではありません。つまり、MikkTSpaceのような小さなクラスは「どちらでも大差ない」のです。
+
+このような小さなクラスの作成タイミングは、実行する環境によって決めることが多いです。そして、2023年現在のコンピューターにとっては、どちらかというとメモリより実行速度のほうが重要です。
+
+そこで、「最初に作成して使い回す」ことにします。
+
+ということで、MikkTSpaceクラスは`MeshBuffer`コンストラクタで作成することにします。<br>
+また、使い回すためにはメンバ変数にする必要があります。`Mesh.h`を開き、`MeshBuffer`クラスの定義に次のプログラムを追加してください。
+
+```diff
+   BufferObjectPtr buffer;   // 頂点データおよびインデックスデータ
+   size_t usedBytes = 0;     // バッファの使用済み容量(バイト)
+   TextureCallback textureCallback; // テクスチャ作成コールバック
++  std::shared_ptr<class MikkTSpace> mikkTSpace;
+ };
+
+ /**
+ * 欠けている法線を補う
+```
+
+`class MikkTSpace`のように指定すると、先行宣言がなくても型を指定できます。続いて`Mesh.cpp`を開き、`MeshBuffer`コンストラクタの末尾に次のプログラムを追加してください。
+
+```diff
+   // 描画パラメータの容量を予約
+   drawParamsList.reserve(100);
++
++  // タンジェント空間計算用のオブジェクトを作成する
++  mikkTSpace = std::make_shared<MikkTSpace>();
++  if (!mikkTSpace) {
++    LOG_ERROR("MikkTSpaceの作成に失敗");
++  }
+ }
+
+ /**
+ * OBJファイルを読み込む
+```
+
+### 2.21 MikkTSpaceを使ってタンジェントを計算する
+
+最後に、MikkTSpaceオブジェクトを使ってタンジェント空間を計算するプログラムを追加しましょう。`LoadOBJ`メンバ関数に次のプログラムを追加してください。
+
+```diff
+   // 設定されていない法線を補う
+   FillMissingNormals(vertices.data(), vertices.size(),
+     indices.data(), indices.size());
++
++  // タンジェントベクトルを計算
++  if (mikkTSpace) {
++    // MikkTSpaceライブラリでタンジェントを計算
++    MikkTSpace::UserData userData = { indices, vertices };
++    SMikkTSpaceContext context = { &mikkTSpace->interface, &userData };
++    genTangSpaceDefault(&context);
++  }
+
+   // データの位置を初期化
+   const void* indexOffset = 0;
+   const GLint baseVertex = 0;
+```
+
+それから、OBJファイルから読み取った法線ベクトルは正規化されていない場合があります。正しいタンジェントベクトルを計算するには、MikkTSpaceに渡す前に法線ベクトルを正規化しておく必要があります。
+
+`CreateMeshDataFromOBJ`メンバ関数の定義に次のプログラムを追加してください。
+
+```diff
+     // 法線の読み取りを試みる
+     vec3 vn;
+     if (sscanf(p, " vn %f %f %f", &vn.x, &vn.y, &vn.z) == 3) {
++      vn = normalize(vn); // 正規化されていないことがあるので正規化する
+       normals.push_back(vn);
+       continue;
+     }
+```
+
+プログラムが書けたらビルドして実行してください。`a_piece_of_nature`アセットの岩と針葉樹には法線テクスチャが設定されているので、法線マッピングの効果がすぐに確認できます。
+
+樹木の葉の一枚一枚に凹凸が付き、岩の割れ目がただの絵ではなく実際に凹んでいるように見えていたら成功です。
+
+<p align="center">
+<img src="images/22_result_1.jpg" width="45%" />
+</p>
+
+>**【タンジェント空間は実行時に計算しなくてもよい】**<br>
+>市販ゲームなどでは、タンジェント空間の計算はデータ作成時に行います。事前に作成しておくことで、データのロード時間を短縮できます。ただし、タンジェントを扱えるファイル形式を使わなくてはなりません(FBX, Collada, glTFなど)。ただし、汎用ファイル形式には無駄なデータが大量に含まれるため、ゲーム専用のファイル形式を開発して使うことがほとんどです。<br>
+>なお、ファイルやデータの設計はOpenGLの<ruby>範疇<rt>はんちゅう</rt></ruby>ではないため、本テキストでは扱いません。とはいえ、ロード時間を短縮するためのデータ設計を考えたり、実際に試してみるのはよい練習になります。余裕があればチャレンジしてみてください。
 
 >**【2章のまとめ】**
 >
@@ -876,5 +1767,3 @@ GLint glGetUniformLocation(シェーダプログラムの管理番号, ユニフ
 >* 
 >* 
 >* 
-
-<div style="page-break-after: always"></div>
