OpenGL3D_2023_21.mdの変更を反映

--- a/OpenGL3D_2023_22.md
+++ b/OpenGL3D_2023_22.md
@@ -760,9 +760,9 @@ $$
 ```diff
    // 管理番号を取得
    operator GLuint() const { return prog; }
-+
-+  // ロケーション番号を取得
-+  GLint ColorLocation() const { return locColor; }
+
+   // ロケーション番号を取得
+   GLint ColorLocation() const { return locColor; }
 +  GLint RoughnessAndMetallicLocation() const { return locRoughnessAndMetallic; }
 
  private:
@@ -771,7 +771,7 @@ $$
    GLuint prog = 0;        // プログラムオブジェクト
    std::string filenameFS; // フラグメントシェーダファイル名
    std::string filenameVS; // 頂点シェーダファイル名
-+  GLint locColor = -1;
+   GLint locColor = -1;
 +  GLint locRoughnessAndMetallic = -1;
  };
 
@@ -781,13 +781,12 @@ $$
 次に`ProgramObject.cpp`を開き、`ProgramObject`コンストラクタの定義に次のプログラムを追加してください。
 
 ```diff
-   if (status != GL_TRUE) {
      LOG_ERROR("シェーダのリンクに失敗(vs=%s, fs=%s)", filenameVS, filenameFS);
      return;
    }
-+
-+  // ロケーション番号を取得
-+  locColor = glGetUniformLocation(prog, "color");
+
+   // ロケーション番号を取得
+   locColor = glGetUniformLocation(prog, "color");
 +  locRoughnessAndMetallic = glGetUniformLocation(prog, "roughnessAndMetallic");
 
    LOG("シェーダを作成(vs=%s, fs=%s)", filenameVS, filenameFS);
