SetParentAndJoint関数に指定した関節番号について、説明を追加

--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -1514,6 +1514,8 @@ void glDeleteSync(削除する同期オブジェクト);
 
 武器の位置と角度は`posRightHand`(ポス・ライトハンド)と`rotRightHand`(ロット・ライトハンド)定数として定義しています。武器によって適切な値は異なりますので、うまく調整してください。
 
+それから、右腕の関節番号として`2`を指定しています。このプログラムの場合、`SetParentAndJoint`関数に指定する関節番号は、`Engine::Initialize`メンバ関数において定義したスケルトン配列のインデックスです。
+
 プログラムが書けたらビルドして実行してください。男性モデルが右手に武器を持っていたら成功です。
 
 <p align="center">
