SkeletalMeshRenderer::DrawをProgramObjectに対応させるためのコードを追記

--- a/OpenGL3D_2023_21.md
+++ b/OpenGL3D_2023_21.md
@@ -637,7 +637,7 @@ void glGetProgramiv(プログラムの管理番号, 取得する情報の種類,
 +  glUseProgram(*progShadowSkeletal);
 +  glBindVertexArray(*meshBuffer->GetVAOSkeletal());
 +  for (const GameObject* e : skeletalMeshList) {
-+    e->renderer->Draw(*e, *progShadowSkeletal, *ssboJointMatrix, bpJointMatrices);
++    e->renderer->Draw(*e, *progShadowSkeletal, ssboJointMatrix[jointMatrixIndex], bpJointMatrices);
 +  }
 
    // 深度テクスチャを割り当てる
@@ -691,8 +691,62 @@ void glGetProgramiv(プログラムの管理番号, 取得する情報の種類,
  }
 ```
 
-これで、`color`ユニフォーム変数の有無を取得できるようになりました。<br>
-続いて`SkeletalMeshRenderer.cpp`を開き、`Draw`メンバ関数の定義に次のプログラムを追加してください。
+`glGetUniformLocation`関数は文字列の比較を行うため、処理に時間がかかります。コンストラクタで1度だけ呼び出すことで、描画のたびに文字列比較をしなくて済むので高速化が期待できます。
+
+これで、`color`ユニフォーム変数の有無を取得できるようになりました。
+
+次に、`SkeletalMeshRenderer`コンポーネントを`ProgramObject`に対応させます。`SkeletalMeshRenderer.h`を開き、`ProgramObject`クラスの先行宣言を追加してください。
+
+```diff
+ #include <vector>
+ #include <memory>
+
+ class GameObject;
++class ProgramObject;
+
+ /**
+ * 関節の座標変換パラメータ
+```
+
+それから、`Draw`メンバ関数の宣言を次のように変更してください。
+
+```diff
+   * @param bindigPoint SSBOのバインディングポイント
+   */
+   void Draw(const GameObject& gameObject,
+-    GLuint program, GLuint ssbo, GLuint bindingPoint);
++    const ProgramObject& program, GLuint ssbo, GLuint bindingPoint);
+
+ private:
+   void Calc(int i, mat4* m);
+```
+
+`Draw`メンバ関数の定義に次のプログラムを追加してください。
+
+続いて`SkeletalMeshRenderer.cpp`を開き、`ProgramObject.h`をインクルードしてください。
+
+```diff
+ * @file SkeletalMeshRenderer.cpp
+ */
+ #include "SkeletalMeshRenderer.h"
++#include "ProgramObject.h"
+ #include "GameObject.h"
+ #include "Engine.h"
+```
+
+次に、`Draw`メンバ関数の定義を次のように変更してください。
+
+```diff
+ * スケルタルメッシュを描画
+ */
+ void SkeletalMeshRenderer::Draw(const GameObject& gameObject,
+-  GLuint program, GLuint ssbo, GLuint bindingPoint)
++  const ProgramObject& program, GLuint ssbo, GLuint bindingPoint)
+ {
+   const size_t jointCount = skeletalMesh->joints.size();
+```
+
+さらに、`Draw`メンバ関数の定義に次のプログラムを追加してください。
 
 ```diff
    if (!gameObject.materials.empty()) {
@@ -707,9 +761,7 @@ void glGetProgramiv(プログラムの管理番号, 取得する情報の種類,
  }
 ```
 
-`glGetUniformLocation`関数は文字列の比較を行うため、処理に時間がかかります。コンストラクタで1度だけ呼び出すことで、描画のたびに文字列比較をしなくて済むので高速化が期待できます。
-
-プログラムが書けたらビルドして実行してください。出力ウィンドウにエラーメッセージが表示されなくなっていたら成功です。
+これで、`Draw`メンバ関数は、必要なときだけカラーを設定するようになりました。プログラムが書けたらビルドして実行してください。出力ウィンドウにエラーメッセージが表示されなくなっていたら成功です。
 
 >**【2章のまとめ】**
 >
