CreateShadowMap内でスケルタルメッシュを記録するタイミングを、「スタティックメッシュの有無を判定する前」に移動

--- a/OpenGL3D_2023_21.md
+++ b/OpenGL3D_2023_21.md
@@ -585,11 +585,15 @@ void glGetProgramiv(プログラムの管理番号, 取得する情報の種類,
    for (GameObjectList::iterator i = begin; i != end; ++i) {
 ```
 
-シャドウテクスチャの実体は深度マップで、アルファはカットオフ値によって「描画する・しない」に2分されます。半透明オブジェクトに起因する描画順の問題が起こらないため、描画順を変更しても描画結果は変わりません。
+シャドウテクスチャの実体は深度マップで、深度マップにはアルファ値がありません。つまり、通常の描画のように半透明オブジェクトに起因する描画順の問題は起こらないわけです。
 
-そこで、スケルタルメッシュを記録してスタティックメッシュとは分けて描画することで、時間のかかるシェーダ切り替えを最小限に抑えます。
+これは、描画順を変更しても描画結果が変わらないことを意味します。そこで、時間のかかるシェーダ切り替えを最小限に抑えるため、スケルタルメッシュとスタティックメッシュを分けて描画することにします。
 
-まず記録用の変数を用意しましょう。変数名は`skeletalMeshList`(スケルタル・メッシュ・リスト)とします。メッシュを描画するプログラムに、次のプログラムを追加してください。
+手順としては、スタティックメッシュの描画中にスケルタルメッシュを記録し、スタティックメッシュ描画後に記録したスケルタルメッシュを描画する、となります。
+
+この手順を実行するには、スケルタルメッシュを記録する配列が必要です。配列の名前は`skeletalMeshList`(スケルタル・メッシュ・リスト)とします。
+
+`CreateShadowMap`メンバ関数の定義にあるメッシュを描画するプログラムに、次のプログラムを追加してください。
 
 ```diff
    glProgramUniformMatrix4fv(*progShadowSkeletal,
@@ -605,25 +609,22 @@ void glGetProgramiv(プログラムの管理番号, 取得する情報の種類,
 次にスケルタルメッシュを記録します。メッシュを描画するプログラムに次のプログラムを追加してください。
 
 ```diff
-       } else {
-         Draw(*e->staticMesh, *progShadow, e->materials);
-       }
-     }
-+
+   skeletalMeshList.reserve(end - begin);
+   for (GameObjectList::iterator i = begin; i != end; ++i) {
+     const auto& e = *i;
 +    // スケルタルメッシュを記録
 +    if (e->renderer) {
 +      skeletalMeshList.push_back(e.get());
 +    }
-   } // for
 
-   // 深度テクスチャを割り当てる
-   glBindTextureUnit(2, *texShadow);
+     if (!e->staticMesh) {
+       continue;
 ```
 
 続いて、記録したスケルタルメッシュを描画します。メッシュを描画するプログラムの下に、次のプログラムを追加してください。
 
 ```diff
-       skeletalMeshList.push_back(e.get());
+       Draw(*e->staticMesh, *progShadow, e->materials);
      }
    } // for
 +
@@ -648,7 +649,7 @@ void glGetProgramiv(プログラムの管理番号, 取得する情報の種類,
 
 影は表示されたものの、Visual Studioの出力ウィンドウを見てみると大量のエラーメッセージが表示されています。
 
-このエラーは、`shadow_skeletal`シェーダにはカラーやエミッション用のユニフォーム変数を持たないのに、`standard`シェーダと同じ設定で描画しようとしたことが原因です。
+このエラーは、`shadow_skeletal`シェーダはカラーやエミッション用のユニフォーム変数を持たないのに、`standard`シェーダと同じように設定して描画しようとしたことが原因です。
 
 忘れているかもしれませんが、以前作成したスタティックメッシュ用の`Draw`関数では、カラー用のユニフォーム変数を持つシェーダかどうかを調べて設定を切り替えていました。
 
