からのテクスチャを作成するときに拡大縮小フィルタを設定する

--- a/OpenGL3D_2023_17.md
+++ b/OpenGL3D_2023_17.md
@@ -807,6 +807,8 @@ void glDeleteFramebuffers(削除するFBOの数, 削除するFBOのIDの配列);
 +  glTextureStorage2D(id, 1, gpuFormat, width, height);
 +  glTextureParameteri(id, GL_TEXTURE_WRAP_S, wrapMode);
 +  glTextureParameteri(id, GL_TEXTURE_WRAP_T, wrapMode);
++  glTextureParameteri(id, GL_TEXTURE_MIN_FILTER, GL_LINEAR);
++  glTextureParameteri(id, GL_TEXTURE_MAG_FILTER, GL_LINEAR);
 +
 +  // 深度テクスチャの場合、シャドウマッピングのために比較モードを設定する
 +  switch (gpuFormat) {
