ガイドコードを以前のテキストに合わせる

--- a/OpenGL3D_2023_21.md
+++ b/OpenGL3D_2023_21.md
@@ -1716,7 +1716,8 @@ UIは`overlay`キューで描画しているので、その直前にデフォル
 +  std::vector<FramebufferObjectPtr> fboBloom; // ブルームエフェクト用FBO
    FramebufferObjectPtr fboShadow; // デプスシャドウ用FBO
 
-   BufferObjectPtr ssboJointMatrices; // 関節行列用のバッファ
+   // 関節行列の配列の最大バイト数
+   static constexpr size_t jointMatricesBytes = 1024 * 1024;
 ```
 
 それでは、シェーダファイルを読み込んでプログラムオブジェクトを作成しましょう。
