ハイトマップのイメージ画像を追加

--- a/OpenGL3D_2024_07.md
+++ b/OpenGL3D_2024_07.md
@@ -15,9 +15,9 @@
 オープンワールドのような広大な世界を作るとき、愚直にモデリングしていてはいくら時間があっても足りません。そのうえ、データも巨大なものになってしまいます。
 そこで、地形の標高を表すモノクロ画像から頂点データを作り出す手法が使われるようになりました。このような画像は、「ハイトマップ(height map)」と呼ばれます。
 
-<div style="text-align: center;width: 100%;">
-<img src="images/07_heightmap_image.png" style="width:75%; margin-left:auto; margin-right:auto"/>
-</div>
+<p align="center">
+<img src="images/2024_07_heightmap_image.png" width="33%" />
+</p>
 
 ハイトマップによって節約できるデータ量を考えてみましょう。頂点データはＸ、Ｙ、Ｚの３つのfloat型からなり、float型は４バイトなので合計１２バイト必要です。対して、画像データの場合、Ｘ、Ｚ座標は画素の位置から自動的に決まるために不要であり、残りのＹだけが色データとして記録されます。そして、モノクロ画像の色データはわずか１バイトです。
 つまり、頂点データを使った場合に比べて、画像データを使った場合は１／１２のデータ量で済んでしまうわけです。高さが256通りでは不足だという場合は２バイトで表すことになりますが、それでも頂点データの１／６です。
