imageFormatとgpuFormatの設定が逆になっていた部分を修正

--- a/OpenGL3D_2024_07.md
+++ b/OpenGL3D_2024_07.md
@@ -394,13 +394,13 @@ Unityの場合、パッケージマネージャから`Terrain Tools`をインス
 +    // 無圧縮の単色
 +    if (header.ddspf.rgbBitCount == 8) {
 +      // 8bitモノクロ画像
-+      imageFormat = GL_R8;
-+      gpuFormat = GL_RED;
++      imageFormat = GL_RED;
++      gpuFormat = GL_R8;
 +      blockSize = 1; // 1ピクセルのバイト数
 +    } else if (header.ddspf.rgbBitCount == 16) {
 +      // 16bitモノクロ画像
-+      imageFormat = GL_R16;
-+      gpuFormat = GL_RED;
++      imageFormat = GL_RED;
++      gpuFormat = GL_R16;
 +      blockSize = 2; // 1ピクセルのバイト数
 +    } else {
 +      LOG_ERROR("%sは未対応のDDSファイルです", filename);
@@ -583,7 +583,7 @@ Unityの場合、パッケージマネージャから`Terrain Tools`をインス
 +  }
 +
 +  // 高さマップに使えない形式ならエラー
-+  if (imageData.imageFormat != GL_R8 && imageData.imageFormat != GL_R16) {
++  if (imageData.gpuFormat != GL_R8 && imageData.gpuFormat != GL_R16) {
 +    LOG_ERROR("%sはモノクロ画像ではありません", filename);
 +    return false;
 +  }
@@ -614,11 +614,11 @@ Unityの場合、パッケージマネージャから`Terrain Tools`をインス
 +    for (int x = 0; x < width; ++x) {
 +      float h;
 +      const size_t index = z * width + x;
-+      if (imageData.imageFormat == GL_R8) {
++      if (imageData.gpuFormat == GL_R8) {
 +        // 8bitデータの場合
 +        h = p[index];
 +        h /= 255; // 0-255を0.0-1.0に変換
-+      } else if (imageData.imageFormat == GL_R16) {
++      } else if (imageData.gpuFormat == GL_R16) {
 +        // 16bitデータの場合
 +        h = p[index * 2];
 +        h += p[index * 2 + 1] * 256;
