カメラ四角錐の画像を追加

--- a/OpenGL3D_2024_08.md
+++ b/OpenGL3D_2024_08.md
@@ -1157,6 +1157,11 @@ vec4 fract(vec4);
 
 四角錐の頂点にはカメラがあります。草を描画する距離を`D`mとすると、カメラの前方`D`mの位置に四角錐の底面があります。底面の4つの頂点は、三角関数を用いてカメラの右ベクトル、上ベクトル、視野角、アスペクト比から計算できます。
 
+<p align="center">
+<img src="images/2024_08_view_pyramid.png" width="40%" /><br>
+[オレンジの点が四角錐の頂点]
+</p>
+
 カメラの前、右、上の3つのベクトルは回転行列を使って計算します。それでは、`CreateGrassInstanceData`関数の定義に、次のプログラムを追加してください。
 
 ```diff
